syntax = "proto3";

package CourseProgress;

option go_package = "Quiz_service_Go/gRPC/gRPC_Code/CourseProgress;CourseProgress";

service CourseProgressService{
    rpc GetCourseProgress(CourseProgressRequest) returns (CourseProgressResponse);
}

message CourseProgressRequest{
    string userId = 1;
    string courseId = 2;
}

message CourseProgressResponse{
    CourseProgression courseProgressData = 1;
}

message CourseProgression{
    string id = 1;
    optional int32 progress_percent = 2;
    optional bool is_completed = 3;
}